--- a/index.html
+++ b/index.html
@@ -10,73 +10,7 @@
     
     <body>
         <div class="v13_563">
-            <div class="v66_124"><img src="HeroImage-landing02 1.png"></div>
-            <div class="v38_770"></div>
-            <span class="v38_771">About Us</span>
-            <span class="v38_772">Our Locations</span><span class="v38_773">Use Cases</span>
-            <div class="v38_774">
-                <span class="v38_775">Regional Delivery Center</span>
-                <span class="v38_776">AMERICAS</span><div class="v38_777"></div>
-            </div>
-            <div class="v38_778">
-                <div class="v38_779"></div>
-                <div class="v38_780"></div>
-                <span class="v38_781">Search</span>
-            </div>
-            <div class="v38_714">
-                <div class="v38_715"></div>
-            </div>
-            <div class="v38_452">
-                <span class="v38_453">2020 AMS RDC</span>
-                <div class="v38_454"></div>
-                <span class="v38_455">C</span>
-            </div>
-            <div class="v38_785">
-                <span class="v38_786">Legal  |  Privacy  |  Site Map Suggest an Update</span>
-            </div>
-            <div class="v57_74">
-                <span class="v57_75">Americas Delivery Centers </span>
-            </div>
-            <div class="name"></div>
-            <div class="v1407_76"><img src="image 4.png"></div>
-            <span class="v1434_60">Helping Clients Transform Their Business.</span>
-            <span class="v1437_71">Unlock value with DXC’s Regional Delivery Centers.</span>
-            <div class="v1434_61">
-                <!--<div class="v1434_62">
-                    <div class="v1434_63"></div>
-                </div>-->
-                <!-- <div><img src="image 17.png"></div>-->
-                <span class="v1434_66">DXC Americas Delivery Centers span across the Americas Region with five separate and unique <b>Regional Delivery Centers (RDC’s)</b>.  The RDC’s are physical centers for enabling our clients business transformation.  We work jointly with our clients to rapidly solve their business problems and accelerate business value by co-developing solutions together: discovering, designing, prototyping, piloting, and innovating.</span>
-                <span class="v1479_7"><b>Define and prioritize</b> our client’s transformation strategy.<br>
-                    <br>
-                    <b>Understand</b> the change required and roadmap needed to execute on the strategy.<br>
-                    <br>
-                    <b>Identify</b> any roadblocks in the form of a problem statement.<br>
-                    <br>
-                    <b>Ideate</b> ways to resolve the problem by exploring and imaging possibly outcomes -- without constraints.<br>  
-                    <br>
-                    <b>Reconcile</b> the solution with technology in a Minimum Viable Product (MVP)/Proof of Concept (POC).<br>
-                    <br>
-                    <b>Drive</b> <b style="color:rgb(111, 44, 145, 1)">real business value</b> and achieve <b style="color:rgb(111, 44, 145, 1)">measured results</b> for our clients.
-                    <!--<img src="image 17.png" style="float:right">-->
-                </span>
-                <div class="v1434_67">
-                    <!--
-                    <div class="v1434_68">
-                        <img src="image 17.png">
-                        <span class="v1434_69">Primary action</span>
-                    </div>
-                    <div class="v1434_70">
-                        <span class="v1434_71">Learn More</span>
-                    </div> -->
-                </div>
-                <div class="v1434_68">
-                    <img src="image 17.png">
-                    <!--<span class="v1434_69">Primary action</span>-->
-                </div>
-        </div>
-            <div class="v1437_63"></div>
-            <span class="v1437_66">We are here to help you...</span>
+            This is my fantastic website.
         </div>
     </body>
     
